--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-# 전송 제외할 파일 목록
-*.txt
+# 제외할 파일 목록
+
 *.hwp
 *.xls
 *.xlsm
-*.xlsx
 *.png
 *.jpg
 *.mp4
+*.txt
 
 # 전송 제외할 폴더 목록
-# 만약 제외할 폴더가 extras라는 폴더라면 아래 #를 제거하세요
-extras/
+# 만약 제외할 폴더가 extras라 폴더라면 아래#을 제외
+해주세요.
+# extras/
